--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ PORT=4041
 MONGO_URL=mongodb+srv://buddhikadilupulr:buddhikadilupulr@test.qwyusmp.mongodb.net/
 secret = "abc"
 EMAIL=buddhikadilupulr@gmail.com
+ReciverEmail=buddhikad1999@gmail.com
 EMAIL_PASSWORD=glnxeedbrtzhrabr
