--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-jwt": "^6.1.0",
     "express-validation": "^3.0.8",
     "express-validator": "^6.13.0",
+    "file-stream-rotator": "^1.0.0",
     "generate-password": "^1.7.0",
     "http-status": "^1.5.0",
     "joi": "^17.4.2",
